# PhantomArbiter

./: .env.example  .env.template  .gitignore  ACTION_PLAN.md  ADR_008_PHASE_1_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_ARBITRAGE.md  ASYNC_COROUTINE_FIXES.md  CHANGELOG.md  CONTRIBUTING.md  DELTA_NEUTRAL_IMPLEMENTATION_SUMMARY.md  DRIFT_API_COVERAGE.md  DRIFT_SDK_MIGRATION_SUMMARY.md  ENGINES_EXPLAINED.md  FUNDING_ENGINE_CONSOLIDATION.md  FUNDING_ENGINE_UI_STATUS.md  LICENSE  LIVE_EXECUTION_LOGS.csv  MAGIC_EDEN_RESULTS.md  MARKETPLACE_API_ANALYSIS.md  MULTI_MARKET_ANALYSIS.md  NFT_JANITOR_README.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  README.md  REMAINING_WORK_SUMMARY.md  SAGE_SIM_LOGS.csv  SECURITY.md  STARTHERE.md  TENSOR_API_STATUS.md  TENSOR_STATUS_UPDATE.md  TEST_DEPOSIT_GUIDE.md  VAULT_INVESTIGATION_SUMMARY.md  benchmark_rust.py  bridge_test_output.txt  build_rust.py  build_station.py  build_venv.py  calc_disc.py  check_api_connectivity.py  check_bad_pairs.py  (+95 more)
.claude/: settings.local.json
apps/datafeed/: README.md  pyproject.toml
apps/datafeed/src/datafeed/: __init__.py  market_data.proto  market_data_pb2.py  market_data_pb2_grpc.py  price_aggregator.py  server.py  websocket_manager.py
apps/datafeed/src/scrapers/: base.py  birdeye.py  dexscreener.py
apps/datafeed/tests/: __init__.py  test_aggregator.py  test_connection_health.py  test_data_consistency.py  test_data_feed_pipeline.py
apps/galaxy/: README.md  pyproject.toml
apps/galaxy/frontend/: dashboard.html  hud.css
apps/galaxy/frontend/components/: LogStream.js  ScanTable.js  StatsPanel.js
apps/galaxy/frontend/managers/: EffectManager.js  FleetManager.js  GalaxyGame.js  MiniMapManager.js  SceneManager.js  SettingsManager.js  StarSystemManager.js  UIManager.js
apps/galaxy/src/galaxy/: __init__.py  cache_bridge.py  connection_manager.py  constellation_manager.py  coordinate_transformer.py  models.py  server.py  state.py  visual_transformer.py
apps/galaxy/tests/: __init__.py  test_constellation_manual.py  test_server.py
bridges/: check_exports.js  execution_engine.js  execution_engine.ts  meteora_bridge.js  meteora_dlmm.ts  orca_daemon.js  orca_daemon.ts  package.json  raydium_clmm.js  raydium_clmm.ts  raydium_daemon.js  raydium_daemon.ts
config/: blocked_tokens.json  capital_state.json  db_config.py  global_state.json  grading_history.json  longtail_config.py  rpc_pool.json  settings.py  strategies.yaml  strategy_map.json  thresholds.py  trade_history.json
data/: arbiter.db-shm  arbiter.db-wal  engine_state.json  funding_harvest.csv  market_data.db  phantom.db  price_cache.json  price_cache.json.tmp  settlement_history.csv  shadow_audits.csv  simulated_trades.csv  trade_history.json.bak  trading_journal.db  trading_journal.db-shm  trading_journal.db-wal  trading_journal_archived_20251214_210319.db  watchdog_state.json  watchlist.json
docs/: AGENT.md  API.md  README.md  (+52 more)
src_rust/: Cargo.toml  build_log.txt  check_log.txt  pyproject.toml
src_rust/src/: amm_math.rs  cycle_finder.rs  flash_cache.rs  graph.rs  instruction_builder.rs  lib.rs  log_parser.rs  metadata.rs  multiverse.rs  network_submitter.rs  pda.rs  router.rs  scalper_logic.rs  scorer.rs  slab_decoder.rs  slot_consensus.rs  tick_array_manager.rs  token2022.rs  tx_parser.rs  web_math.rs  whiff_buffer.rs  wss_aggregator.rs
(+1006 files in other folders)
