[package]
name = "phantom_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "phantom_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
solana-sdk = "1.18"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
borsh = "1.0"
thiserror = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
rayon = "1.8"
